syntax = "proto3";

package sol.spl_token.v1;

message Mints {
  repeated Mint mints = 1;
}

message Mint {
  string address = 1;
  uint32 decimals = 2;
  string mint_authority = 3;
  string freeze_authority = 4;
}

message Accounts {
  repeated Account accounts = 1;
}

message Account {
  string address = 1;
  string owner = 2;
  string mint = 3;
}

message TokenTransfers {
  repeated TokenTransfer transfers = 1;
}

message TokenTransfer {
  string transaction_id = 1;
  uint64 ordinal = 2;
  string from = 3;
  string to = 4;
  string mint = 5;
  uint64 native_amount = 6;
  string amount = 7;
}
